# mio

./: .python-version  app.py  app1.py  database.py  esquema.sql  pyproject.toml  requirements.txt
src/template/: editarInf.html  index.html
templates/: agregar_usuario.html  base.html  ed_usuario.html  editar_usuario.html  index.html
