[tool.poetry]
name = "mio"
version = "0.1.0"
description = ""
authors = ["Fernando A. Rodriguez R. <softfar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
pymysql = "^1.0.3"
flask = "^2.2.3"
cryptography = "^40.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
